[package]
name = "annuma"
version = "0.1.0"
edition = "2021"

[build-dependencies]
csv = "1.2"
serde = { version = "1", features = ["derive"] }
quote = "1"
itertools = "0.11"
prettyplease = "0.2"
syn = "2"
heck = "0.4"
proc-macro2 = "1"

[dependencies]
clap = { version = "4", features = ["derive"] }
heck = "0.4"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geocoding = "0.4"
kml = "0.8.2"
hex = "0.4"
strum = { version = "0.25", features = ["derive"] }
itertools = "0.11"
futures-util = "0.3"
futures = "0.3"
human-panic = "1"
color-eyre = "0.6"
clap_complete = "4.3"
spinoff = { version = "0.8", features = ["aesthetic"] }
webbrowser = "0.8"
console = "0.15"
